--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">OmegaDash</string>
-    <string name="title_activity_map">Map</string>
+    <string name="title_activity_map">OmegaDash</string>
 </resources>
